<resources>
    <string name="app_name">ESP32_IoT_AndroidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IoT ESP32 Application</string>
    <string name="nav_header_subtitle">mp@tech-in-mind.it</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_connect">Connect</string>
    <string name="humidity_perc">100%</string>
    <string name="measure_static_text_sensor_val">0</string>
    <string name="solar_luminosity">sensor</string>
    <string name="str_solar_intensity_value">OFF</string>
    <string name="str_value_temp">0 °C</string>
    <string name="str_static_info">Status:</string>
    <string name="str_init_info">Click on device to connect</string>
    <string name="bt_disconnect_device">Disconnect</string>
    <string name="home_procedure">"With the following steps, you can connect application to ESP32 device and measure data:\n\n - from main drawer click on 'Connect', accept the permissions and select the device to establish a connect\n\n - click on 'Measure' to read data published from characteristics"</string>
    <string name="fab_clicked_text">Contacts: mp@tech-in-mind.it - https://github.com/MpDev89</string>
</resources>