<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measure.MeasureFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="@+id/imageButton3">


            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="Connection status:"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/tv_status_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_status" />


            <ImageView
                android:id="@+id/iv_temperature"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/temperature"
                app:layout_constraintEnd_toStartOf="@+id/tv_temperature_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_temperature_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/str_value_temp"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_temperature"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_result" />

            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/humidity"
                app:layout_constraintEnd_toStartOf="@+id/tv_humidity_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_temperature" />

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="95dp"
                android:text="@string/humidity_perc"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_humidity"
                app:layout_constraintTop_toBottomOf="@+id/iv_temperature"/>

            <ImageView
                android:id="@+id/iv_luminosity"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/bulboff"
                app:layout_constraintEnd_toStartOf="@+id/tv_luminosity_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_humidity" />

            <TextView
                android:id="@+id/tv_luminosity_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/str_solar_intensity_value"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_luminosity"
                app:layout_constraintTop_toBottomOf="@+id/iv_humidity"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>